// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dependency dependency automatic update 1`] = `
Object {
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.74d1a0a2-4444-407b-a470-ac6ae1f3e8e2": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "396b8653-6666-4126-92b6-74006a435276",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.88d64c7c-1111-4eea-be97-133e12c8c1ce": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "396b8653-6666-4126-92b6-74006a435276",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.f78cb1af-3333-4d8b-8cd4-4e8a7da3a373": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    },
  ],
}
`;

exports[`Dependency dependency automatic update 2`] = `
Array [
  Object {
    "blockDependencies": Array [],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": undefined,
        "code": "NumberLiteral",
        "display": "1",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "1",
      },
    ],
    "cst": null,
    "definition": "=1",
    "dirty": false,
    "flattenVariableDependencies": Array [],
    "functionDependencies": Array [],
    "kind": "constant",
    "name": "num0",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [],
    "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
    "variableNameDependencies": Array [],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 1,
        "type": "number",
      },
      "result": Object {
        "result": 1,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "cd0755b8-0000-4326-876d-853e59cb0259",
          "kind": "Variable",
          "name": "num0",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num0",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num0",
      },
      Object {
        "attrs": undefined,
        "code": "Multi",
        "display": "*",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "*",
      },
      Object {
        "attrs": undefined,
        "code": "NumberLiteral",
        "display": "2",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "2",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": undefined,
        "code": "NumberLiteral",
        "display": "100",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "100",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259 * 2 + 100",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num1",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
    "variableNameDependencies": Array [
      Object {
        "name": "num0",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 102,
        "type": "number",
      },
      "result": Object {
        "result": 102,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "cd0755b8-0000-4326-876d-853e59cb0259",
          "kind": "Variable",
          "name": "num0",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num0",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num0",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num2",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
    "variableNameDependencies": Array [
      Object {
        "name": "num0",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 1,
        "type": "number",
      },
      "result": Object {
        "result": 1,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "94a89a9d-2222-4e46-ae48-887238bc2bec",
          "kind": "Variable",
          "name": "num2",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num2",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num2",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
          "kind": "Variable",
          "name": "num1",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num1",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num1",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec + #9dda8306-dbe1-49d3-868d-1a7c86f27328.88d64c7c-1111-4eea-be97-133e12c8c1ce",
    "dirty": true,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num3",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
    "variableNameDependencies": Array [
      Object {
        "name": "num2",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num1",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 3,
        "type": "number",
      },
      "result": Object {
        "result": 3,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "94a89a9d-2222-4e46-ae48-887238bc2bec",
          "kind": "Variable",
          "name": "num2",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num2",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num2",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "cd0755b8-0000-4326-876d-853e59cb0259",
          "kind": "Variable",
          "name": "num0",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num0",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num0",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec + #9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num4",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
    "variableNameDependencies": Array [
      Object {
        "name": "num2",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num0",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 2,
        "type": "number",
      },
      "result": Object {
        "result": 2,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
          "kind": "Variable",
          "name": "num3",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num3",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num3",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "cd0755b8-0000-4326-876d-853e59cb0259",
          "kind": "Variable",
          "name": "num0",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num0",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num0",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "94a89a9d-2222-4e46-ae48-887238bc2bec",
          "kind": "Variable",
          "name": "num2",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num2",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num2",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.f78cb1af-3333-4d8b-8cd4-4e8a7da3a373 + #9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259 + #9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num5",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
    ],
    "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    "variableNameDependencies": Array [
      Object {
        "name": "num3",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num0",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num2",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 5,
        "type": "number",
      },
      "result": Object {
        "result": 5,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
          "kind": "Variable",
          "name": "num4",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num4",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num4",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
          "kind": "Variable",
          "name": "num1",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num1",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num1",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.74d1a0a2-4444-407b-a470-ac6ae1f3e8e2 + #9dda8306-dbe1-49d3-868d-1a7c86f27328.88d64c7c-1111-4eea-be97-133e12c8c1ce",
    "dirty": true,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num6",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "variableId": "396b8653-6666-4126-92b6-74006a435276",
    "variableNameDependencies": Array [
      Object {
        "name": "num4",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num1",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 4,
        "type": "number",
      },
      "result": Object {
        "result": 4,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
]
`;

exports[`Dependency snapshot 1`] = `
Object {
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.74d1a0a2-4444-407b-a470-ac6ae1f3e8e2": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "396b8653-6666-4126-92b6-74006a435276",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.88d64c7c-1111-4eea-be97-133e12c8c1ce": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "396b8653-6666-4126-92b6-74006a435276",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
    },
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    },
  ],
  "#9dda8306-dbe1-49d3-868d-1a7c86f27328.f78cb1af-3333-4d8b-8cd4-4e8a7da3a373": Array [
    Object {
      "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    },
  ],
}
`;

exports[`Dependency snapshot 2`] = `
Array [
  Object {
    "blockDependencies": Array [],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": undefined,
        "code": "NumberLiteral",
        "display": "1",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "1",
      },
    ],
    "cst": null,
    "definition": "=1",
    "dirty": false,
    "flattenVariableDependencies": Array [],
    "functionDependencies": Array [],
    "kind": "constant",
    "name": "num0",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [],
    "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
    "variableNameDependencies": Array [],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 1,
        "type": "number",
      },
      "result": Object {
        "result": 1,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": undefined,
        "code": "NumberLiteral",
        "display": "2",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "2",
      },
    ],
    "cst": null,
    "definition": "=2",
    "dirty": false,
    "flattenVariableDependencies": Array [],
    "functionDependencies": Array [],
    "kind": "constant",
    "name": "num1",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [],
    "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
    "variableNameDependencies": Array [],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 2,
        "type": "number",
      },
      "result": Object {
        "result": 2,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "cd0755b8-0000-4326-876d-853e59cb0259",
          "kind": "Variable",
          "name": "num0",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num0",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num0",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num2",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
    "variableNameDependencies": Array [
      Object {
        "name": "num0",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 1,
        "type": "number",
      },
      "result": Object {
        "result": 1,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "94a89a9d-2222-4e46-ae48-887238bc2bec",
          "kind": "Variable",
          "name": "num2",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num2",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num2",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
          "kind": "Variable",
          "name": "num1",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num1",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num1",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec + #9dda8306-dbe1-49d3-868d-1a7c86f27328.88d64c7c-1111-4eea-be97-133e12c8c1ce",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num3",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
    "variableNameDependencies": Array [
      Object {
        "name": "num2",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num1",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 3,
        "type": "number",
      },
      "result": Object {
        "result": 3,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "94a89a9d-2222-4e46-ae48-887238bc2bec",
          "kind": "Variable",
          "name": "num2",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num2",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num2",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "cd0755b8-0000-4326-876d-853e59cb0259",
          "kind": "Variable",
          "name": "num0",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num0",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num0",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec + #9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num4",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
    ],
    "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
    "variableNameDependencies": Array [
      Object {
        "name": "num2",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num0",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 2,
        "type": "number",
      },
      "result": Object {
        "result": 2,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
          "kind": "Variable",
          "name": "num3",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num3",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num3",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "cd0755b8-0000-4326-876d-853e59cb0259",
          "kind": "Variable",
          "name": "num0",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num0",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num0",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "94a89a9d-2222-4e46-ae48-887238bc2bec",
          "kind": "Variable",
          "name": "num2",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num2",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num2",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.f78cb1af-3333-4d8b-8cd4-4e8a7da3a373 + #9dda8306-dbe1-49d3-868d-1a7c86f27328.cd0755b8-0000-4326-876d-853e59cb0259 + #9dda8306-dbe1-49d3-868d-1a7c86f27328.94a89a9d-2222-4e46-ae48-887238bc2bec",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num5",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "f78cb1af-3333-4d8b-8cd4-4e8a7da3a373",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
    ],
    "variableId": "a17872fd-5555-4fe1-9cc9-57169a46b645",
    "variableNameDependencies": Array [
      Object {
        "name": "num3",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num0",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num2",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 5,
        "type": "number",
      },
      "result": Object {
        "result": 5,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
  Object {
    "blockDependencies": Array [
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    ],
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Equal",
        "display": "=",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "any",
        "value": "=",
      },
      Object {
        "attrs": Object {
          "id": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
          "kind": "Variable",
          "name": "num4",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num4",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num4",
      },
      Object {
        "attrs": undefined,
        "code": "Plus",
        "display": "+",
        "errors": Array [],
        "hide": false,
        "renderText": undefined,
        "type": "number",
        "value": "+",
      },
      Object {
        "attrs": Object {
          "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
          "kind": "Variable",
          "name": "num1",
          "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        },
        "code": "Variable",
        "display": "num1",
        "errors": Array [],
        "hide": false,
        "renderText": [Function],
        "type": "number",
        "value": "num1",
      },
    ],
    "cst": null,
    "definition": "=#9dda8306-dbe1-49d3-868d-1a7c86f27328.74d1a0a2-4444-407b-a470-ac6ae1f3e8e2 + #9dda8306-dbe1-49d3-868d-1a7c86f27328.88d64c7c-1111-4eea-be97-133e12c8c1ce",
    "dirty": false,
    "flattenVariableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "cd0755b8-0000-4326-876d-853e59cb0259",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "94a89a9d-2222-4e46-ae48-887238bc2bec",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "functionDependencies": Array [],
    "kind": "expression",
    "name": "num6",
    "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
    "type": "normal",
    "valid": true,
    "variableDependencies": Array [
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "74d1a0a2-4444-407b-a470-ac6ae1f3e8e2",
      },
      Object {
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
        "variableId": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
      },
    ],
    "variableId": "396b8653-6666-4126-92b6-74006a435276",
    "variableNameDependencies": Array [
      Object {
        "name": "num4",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
      Object {
        "name": "num1",
        "namespaceId": "9dda8306-dbe1-49d3-868d-1a7c86f27328",
      },
    ],
    "variableValue": Object {
      "cacheValue": Object {
        "result": 4,
        "type": "number",
      },
      "result": Object {
        "result": 4,
        "type": "number",
      },
      "success": true,
      "updatedAt": null,
    },
    "version": 0,
  },
]
`;
